--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="progress-actions">
                         <button type="button" class="progress-btn" id="view-results-btn"
-                            title="Ver resultados">Ver</button>
+                            title="Abrir painel">Painel</button>
                         <button type="button" class="progress-btn progress-btn--ghost" id="clear-results-btn"
                             title="Limpar resultados">Limpar</button>
                     </div>
