feat: Revamp dashboard pricing display and update financial data handling

--- a/dashboard.html
+++ b/dashboard.html
@@ -53,19 +53,23 @@
                 <h2 class="section-title">Como funciona?</h2>
                 <div class="dashboard-info__row">
                     <span class="dashboard-info__icon" aria-hidden="true">📌</span>
-                    <p><strong>Sistema:</strong> Este dashboard é apenas para consulta e visualização rápida dos resultados.</p>
+                    <p><strong>Sistema:</strong> Este painel é apenas para consulta e visualização rápida dos resultados.</p>
                 </div>
                 <div class="dashboard-info__row">
                     <span class="dashboard-info__icon" aria-hidden="true">🧠</span>
-                    <p><strong>Interpretação:</strong> cada teste é interpretado individualmente. Correlações entre testes só são feitas na interpretação humana.</p>
+                    <p><strong>Interpretação:</strong> cada teste é interpretado individualmente. Correlações entre testes só são feitas pelo Relatório Técnico.</p>
                 </div>
                 <div class="dashboard-info__row">
                     <span class="dashboard-info__icon" aria-hidden="true">✅</span>
-                    <p><strong>Se não terminou um teste ou não pagou:</strong> você pode clicar em “Solicitar interpretação humana” para seguir.</p>
+                    <p><strong>Relatório técnico:</strong> É um documento produzido e assinado pela equipe, com validade legal. Você pode clicar em “Adquirir Relatório” caso tenha interesse.</p>
+                </div>
+                <div class="dashboard-info__row">
+                    <span class="dashboard-info__icon" aria-hidden="true">🧾</span>
+                    <p id="dashboard-price-text">A produção do relatório com a anáilse detalhada e interpretação de 1 teste custa <strong id="dashboard-price-one">—</strong>. Um relatório para até 3 testes custa <strong id="dashboard-price-three">—</strong>.</p>
                 </div>
                 <div class="dashboard-info__row">
                     <span class="dashboard-info__icon" aria-hidden="true">💳</span>
-                    <p><strong>Pagamento:</strong> Este sistema aqui não registra pagamentos. Todo o pagamento é feito pelo Mercado Pago. Se você já pagou, basta aguardar a confirmação.</p>
+                    <p id="dashboard-payment-text"><strong>Pagamento:</strong> Todo o pagamento é feito pelo Mercado Pago. Se você já pagou, basta aguardar a confirmação.</p>
                 </div>
                 <div class="dashboard-info__row">
                     <span class="dashboard-info__icon" aria-hidden="true">🔒</span>
